// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/own-expense-programs/_id/index.vue should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object],[object Object]"
  class="z-page-stub"
  compact="compact"
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <div
    class="z-data-card-stub"
    data-data-card=""
    title="基本情報"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <z-data-card-item-stub
      icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
      label="事業所名"
      value="すべての事業所"
    />
    <z-data-card-item-stub
      icon="M2 14H8V20H2M16 8H10V10H16M2 10H8V4H2M10 4V6H22V4M10 20H16V18H10M10 16H22V14H10"
      label="自費サービス名"
      value="魚粉マシマシで。"
    />
    <z-data-card-item-stub
      icon="M6,2H18V8H18V8L14,12L18,16V16H18V22H6V16H6V16L10,12L6,8V8H6V2M16,16.5L12,12.5L8,16.5V20H16V16.5M12,11.5L16,7.5V4H8V7.5L12,11.5M10,6H14V6.75L12,8.75L10,6.75V6Z"
      label="単位時間数"
    >
      77分
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
      label="課税区分"
      value="税抜"
    />
    <z-data-card-item-stub
      icon="M13.92 11H18V13H13V15H18V17H13V21H11V17H6V15H11V13H6V11H10.08L5 3H7.37L12 10.29L16.63 3H19L13.92 11Z"
      label="費用（税抜）"
    >
        2,378円
    </z-data-card-item-stub>
    <z-data-card-item-stub
      label="費用（税込）"
    >
        785円
    </z-data-card-item-stub>
    <z-data-card-item-stub
      label="税率区分"
      value="該当なし"
    />
    <z-data-card-item-stub
      icon="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z"
      label="備考"
      value="サンマーメンも好きだ。"
    />
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <z-system-meta-card-stub
    createdat="1977-05-13T21:44:42+0900"
    id="1"
    updatedat="1993-09-04T23:47:40+0900"
  />
  <a
    bottom=""
    class="z-fab-stub"
    data-fab=""
    fixed=""
    icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
    nuxt=""
    right=""
    to="/own-expense-programs/1/edit"
  />
</div>
`;

exports[`pages/own-expense-programs/_id/index.vue z-data-card（基本情報） data-card-item（費用（税抜）and 費用（税込）and 税率区分）is not rendered when taxType value is TaxType.taxExempted 1`] = `
<div
  class="z-data-card-stub"
  data-data-card=""
  title="基本情報"
>
  <div
    class="z-data-card-stub-slot-actions"
  />
  <z-data-card-item-stub
    icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
    label="事業所名"
    value="すべての事業所"
  />
  <z-data-card-item-stub
    icon="M2 14H8V20H2M16 8H10V10H16M2 10H8V4H2M10 4V6H22V4M10 20H16V18H10M10 16H22V14H10"
    label="自費サービス名"
    value="魚粉マシマシで。"
  />
  <z-data-card-item-stub
    icon="M6,2H18V8H18V8L14,12L18,16V16H18V22H6V16H6V16L10,12L6,8V8H6V2M16,16.5L12,12.5L8,16.5V20H16V16.5M12,11.5L16,7.5V4H8V7.5L12,11.5M10,6H14V6.75L12,8.75L10,6.75V6Z"
    label="単位時間数"
  >
      77分
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
    label="課税区分"
    value="非課税"
  />
  <z-data-card-item-stub
    icon="M13.92 11H18V13H13V15H18V17H13V21H11V17H6V15H11V13H6V11H10.08L5 3H7.37L12 10.29L16.63 3H19L13.92 11Z"
    label="費用"
  >
      2,378円
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z"
    label="備考"
    value="サンマーメンも好きだ。"
  />
  <div
    class="z-data-card-stub-slot-header"
  />
</div>
`;

exports[`pages/own-expense-programs/_id/index.vue z-data-card（基本情報） data-card-item（費用）is not rendered when taxType value is not TaxType.taxExempted 1`] = `
<div
  class="z-data-card-stub"
  data-data-card=""
  title="基本情報"
>
  <div
    class="z-data-card-stub-slot-actions"
  />
  <z-data-card-item-stub
    icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
    label="事業所名"
    value="すべての事業所"
  />
  <z-data-card-item-stub
    icon="M2 14H8V20H2M16 8H10V10H16M2 10H8V4H2M10 4V6H22V4M10 20H16V18H10M10 16H22V14H10"
    label="自費サービス名"
    value="魚粉マシマシで。"
  />
  <z-data-card-item-stub
    icon="M6,2H18V8H18V8L14,12L18,16V16H18V22H6V16H6V16L10,12L6,8V8H6V2M16,16.5L12,12.5L8,16.5V20H16V16.5M12,11.5L16,7.5V4H8V7.5L12,11.5M10,6H14V6.75L12,8.75L10,6.75V6Z"
    label="単位時間数"
  >
      77分
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
    label="課税区分"
    value="税抜"
  />
  <z-data-card-item-stub
    icon="M13.92 11H18V13H13V15H18V17H13V21H11V17H6V15H11V13H6V11H10.08L5 3H7.37L12 10.29L16.63 3H19L13.92 11Z"
    label="費用（税抜）"
  >
        2,378円
  </z-data-card-item-stub>
  <z-data-card-item-stub
    label="費用（税込）"
  >
        785円
  </z-data-card-item-stub>
  <z-data-card-item-stub
    label="税率区分"
    value="該当なし"
  />
  <z-data-card-item-stub
    icon="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z"
    label="備考"
    value="サンマーメンも好きだ。"
  />
  <div
    class="z-data-card-stub-slot-header"
  />
</div>
`;
